# swagger/swagger.yml
@@ -2,12 +2,34 @@ swagger: "2.0"
 info: {}
 basePath: /v1
 paths:
+  /GP/BorrowSampleShelf/:
+    get:
+      tags:
+      - GP
+      description: BorrowSampleShelf
+      operationId: UserInterfaceController.BorrowSampleShelf
+      responses:
+        "200":
+          description: ok
+        "403":
+          description: "no"
   /GP/GetLengthOfThread/:
     get:
       tags:
       - GP
       description: 获取线程总长度
       operationId: UserInterfaceController.GetLengthOfThread
+      responses:
+        "200":
+          description: ok
+        "403":
+          description: "no"
+  /GP/ReturnSampleShelf/:
+    get:
+      tags:
+      - GP
+      description: ReturnSampleShelf
+      operationId: UserInterfaceController.ReturnSampleShelf
       responses:
         "200":
           description: ok
